--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ vendor/
 .idea/
 .vscode/
 .DS_Store
+infra/terraform/.terraform/*
+infra/terraform/.terraform.lock.hcl
+infra/terraform/terraform.tfstate
+infra/terraform/terraform.tfstate.backup
+infra/terraform/terraform.tfvars
