--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -63,7 +63,7 @@ deploy-frontend:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     - ssh-keyscan -H ${DEV_HOST} >> ~/.ssh/known_hosts
-    - echo '{"auths": {"gitlab.praktikum-services.ru:5050": {"auth": "${DOCKER_SECRET}"}}, "credHelpers": {"container-registry.cloud.yandex.net": "ycr", "cr.cloud.yandex.net": "ycr", "cr.yandex": "ycr"	}}' > ~/.docker/config.json
+    - 'echo {"auths": {"gitlab.praktikum-services.ru:5050": {"auth": "${DOCKER_SECRET}"}}, "credHelpers": {"container-registry.cloud.yandex.net": "ycr", "cr.cloud.yandex.net": "ycr", "cr.yandex": "ycr"	}}' > ~/.docker/config.json'
     - chmod 644 ~/.ssh/known_hosts
   script:
     - scp ./docker-compose.yml ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/docker-compose.yml
