--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -66,6 +66,7 @@ deploy-frontend:
     - chmod 644 ~/.ssh/known_hosts
   script:
     - 'echo ''{"auths": {"gitlab.praktikum-services.ru:5050": {"auth": "${DOCKER_SECRET}"}}, "credHelpers": {"container-registry.cloud.yandex.net": "ycr", "cr.cloud.yandex.net": "ycr", "cr.yandex": "ycr"	}}'' > config.json'
+    - sed -i 's/#DOCKER_SECRET#/$DOCKER_SECRET/g' config.json
     - scp ./config.json ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/.docker/config.json
     - scp ./docker-compose.yml ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/docker-compose.yml
     - scp ./frontend/nginx.tmpl ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/nginx.tmpl
@@ -74,8 +75,3 @@ deploy-frontend:
       /bin/bash -s " < ./frontend/frontend_deploy.sh 
   needs:
     - job: upload-frontend-latest
-
-cache:
-  key: frontend
-  paths:
-    - frontend/dist/frontend # для хранения фронта 
