--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -66,7 +66,7 @@ deploy-backend:
     - chmod 644 ~/.ssh/known_hosts
   script:
     - 'echo ''{"auths": {"gitlab.praktikum-services.ru:5050": {"auth": "#DOCKER_SECRET#"}}, "credHelpers": {"container-registry.cloud.yandex.net": "ycr", "cr.cloud.yandex.net": "ycr", "cr.yandex": "ycr"	}}'' > config.json'
-    - sed -i "s/#DOCKER_SECRET#/$DOCKER_SECRET/g" config.json
+    - sed -i s/#DOCKER_SECRET#/$DOCKER_SECRET/g config.json
     - scp ./config.json ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/.docker/config.json
     - scp ./docker-compose.yml ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/docker-compose.yml
     - ssh ${DEV_USER}@${DEV_HOST}
