--- a/frontend/app.conf
+++ b/frontend/app.conf
@@ -1,17 +1,24 @@
-upstream backend {
-	server backend:8081;
-}
-
 server {
-    listen       80;
-    
-	location ~ (/|/catalog) {
-        root   /usr/src/app/static/momo-store;
+    listen 80;
+	location  / {
+		root   /usr/src/app/static/momo-store;
         index  index.html index.htm;
     }
 
-	location ~ (/products|auth|categories)
+	location  /auth/whoami/
     {
-     proxy_pass    http://backend;
+		proxy_pass    http://backend:8081/auth/whoami/;
     }
+	
+	location /products/ {
+		proxy_pass    http://backend:8081/products/;
+	}
+	
+	location /categories/ {
+		proxy_pass http://backend:8081/categories/;
+	}
+	
+	location /catalog {
+		return 302 /;
+	}
 }
