--- a/frontend/app.conf
+++ b/frontend/app.conf
@@ -21,4 +21,8 @@ server {
 	location /catalog {
 		return 302 /;
 	}
+
+	location /health {
+    		proxy_pass http://backend:8081/health;
+    	}
 }
