--- a/infra/terraform/userdata.yaml
+++ b/infra/terraform/userdata.yaml
@@ -5,4 +5,4 @@ users:
     shell: /bin/bash    
     sudo: ['ALL=(ALL) NOPASSWD:ALL']
     ssh_authorized_keys:
-      - "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIJKfBL/RTa0cvTO5wf2D699pG/fv3sG/qpDeBJCh2hmQ ed25519-key-20221030"
+      - "${pubkey}"
